--- a/DtissDemoApplication/DtissDemoApplication/DtissDemoApplication.csproj
+++ b/DtissDemoApplication/DtissDemoApplication/DtissDemoApplication.csproj
@@ -64,6 +64,8 @@
     <Content Include="Account\Login.aspx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="AddAccount.aspx" />
+    <Content Include="EmailTemplate.htm" />
+    <Content Include="onetime.aspx" />
     <Content Include="Styles\default.css" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
@@ -71,6 +73,7 @@
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.1.js" />
     <Content Include="Scripts\jquery-1.4.1.min.js" />
+    <Content Include="SuccessPage.aspx" />
     <Content Include="UserPage.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -154,6 +157,13 @@
     <Compile Include="login.Master.designer.cs">
       <DependentUpon>login.Master</DependentUpon>
     </Compile>
+    <Compile Include="onetime.aspx.cs">
+      <DependentUpon>onetime.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="onetime.aspx.designer.cs">
+      <DependentUpon>onetime.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -161,6 +171,13 @@
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="SuccessPage.aspx.cs">
+      <DependentUpon>SuccessPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SuccessPage.aspx.designer.cs">
+      <DependentUpon>SuccessPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="UserPage.aspx.cs">
       <DependentUpon>UserPage.aspx</DependentUpon>
