--- a/DtissDemoApplication/DtissDemoApplication/Web.config
+++ b/DtissDemoApplication/DtissDemoApplication/Web.config
@@ -7,6 +7,13 @@
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="Host" value="smtp.gmail.com"/>
+    <add key="EnableSsl" value="true"/>
+    <add key="UserName" value="pentestproject5@gmail.com"/>
+    <add key="Password" value="Ditiss@123"/>
+    <add key="Port" value="587"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
